--- a/style.css
+++ b/style.css
@@ -3,9 +3,54 @@
   padding: 0;
   box-sizing: border-box;
   font-family: gilroy;
+  color: #fff;
 }
 html,
 body {
   height: 100%;
   width: 100%;
+}
+#page1 {
+  height: 100vh;
+  width: 100%;
+  background-color: #111;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#page1 h1 {
+  font-size: 8.5vw;
+  text-transform: uppercase;
+  font-weight: 900;
+  line-height: 8.5vw;
+}
+#page1 h1 p {
+  text-align: center;
+  font-weight: 400;
+  margin-top: 3vh;
+}
+#page1 h1 svg {
+  height: 6vw;
+  width: 6vw;
+  background-color: #0ba34e;
+  border-radius: 50%;
+}
+#page1-something {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#page1-something h4 {
+  font-weight: 400;
+  font-size: 1vw;
+  text-transform: lowercase;
+  padding: 5px 10px;
+  border: 1px solid #fff;
+  border-radius: 50px;
+}
+#page2 {
+  height: 100vh;
+  width: 100%;
+  background-color: #111;
 }
