--- a/style.css
+++ b/style.css
@@ -10,6 +10,24 @@ body {
   height: 100%;
   width: 100%;
 }
+nav {
+  position: fixed;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 2vw 12vw;
+  justify-content: space-between;
+}
+.nav-part-2 {
+  display: flex;
+  gap: 2vw;
+}
+.nav-part-2 h4 {
+  font-size: 0.76vw;
+  font-weight: 600;
+  text-transform: uppercase;
+}
 #page1 {
   height: 100vh;
   width: 100%;
@@ -40,14 +58,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
 }
 #page1-something h4 {
   font-weight: 400;
   font-size: 1vw;
   text-transform: lowercase;
-  padding: 5px 10px;
-  border: 1px solid #fff;
+  margin-top: 0.5vw;
+  padding: 5px 12px;
+  border: 1px solid hsl(0, 0%, 65%);
   border-radius: 50px;
+}
+#page1-something h4:nth-last-child(2) {
+  /* background-color: red; */
+  border: none;
+  padding: 2px;
 }
 #page2 {
   height: 100vh;
