--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
   font-size: 1vw;
   text-transform: lowercase;
   margin-top: 0.5vw;
-  padding: 5px 12px;
+  padding: 5px 10.4vw;
   border: 1px solid hsl(0, 0%, 65%);
   border-radius: 50px;
 }
