--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 nav {
   position: fixed;
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   align-items: center;
   width: 100%;
@@ -27,6 +27,57 @@ nav {
   font-size: 0.76vw;
   font-weight: 600;
   text-transform: uppercase;
+}
+nav:hover #nav-bottom {
+  height: 150%;
+  bottom: -150%;
+  background-color: #111;
+}
+#nav-bottom {
+  /* background-color: red; */
+  height: 0%;
+  position: absolute;
+  width: 79%;
+  transition: all ease 0.65s;
+  bottom: 0%;
+  border-bottom: 1px solid #dadada;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 2vw 15vw;
+  padding-left: 15.5vw;
+  /* padding-top: 6vw; */
+}
+.bottom-div {
+  margin-top: 6vw;
+  /* position: absolute; */
+}
+.bottom-div h5 {
+  /* background-color: red; */
+  overflow: hidden;
+  margin-bottom: 0.4vw;
+}
+.bottom-div h5 span {
+  font-weight: 500;
+  display: inline-block;
+  font-size: 0.75vw;
+  opacity: 0;
+  /* opacity: 0; */
+}
+nav button {
+  background-color: #0ba34e;
+  display: flex;
+  align-items: center;
+  padding: 12px 14px;
+  font-size: 0.5=85vw;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 50pc;
+  border: none;
+}
+nav button svg {
+  height: 0.85vw;
+  margin-left: 2vw;
 }
 #page1 {
   height: 100vh;
@@ -65,7 +116,7 @@ nav {
   font-size: 1vw;
   text-transform: lowercase;
   margin-top: 0.5vw;
-  padding: 5px 10.4vw;
+  padding: 5px 10px;
   border: 1px solid hsl(0, 0%, 65%);
   border-radius: 50px;
 }
